--- a/.config/i3/config
+++ b/.config/i3/config
@@ -213,7 +213,8 @@ gaps inner 4
 gaps outer 4
 
 assign [class="org.wezfurlong.wezterm"] $ws1
-assign [class="Google-chrome"] $ws2
+assign [class="firefox"] $ws2
+assign [class="thundirbird"] $ws4
 assign [class="Microsoft-edge"] $ws5
 
 
@@ -225,4 +226,4 @@ for_window [class="^.*"] border pixel 5
 
 ## Default startupbehaviour
 exec --no-startup-id wezterm
-exec --no-startup-id google-chrome
+exec --no-startup-id firefox
