--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -74,7 +74,7 @@ shadow-exclude = [
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 # fading = false
-fading = true;
+fading = false;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
@@ -223,7 +223,7 @@ dithered-present = false;
 
 # Enable/disable VSync.
 # vsync = false
-vsync = true;
+vsync = false;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
