--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -159,7 +159,7 @@ rounded-corners-exclude = [
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-blur-method ="dual_kawase"
+# blur-method ="dual_kawase"
 # blur-size = 12
 #
 # blur-deviation = false
@@ -214,7 +214,6 @@ blur-background-exclude = [
 # `xrender` is the default one.
 #
 backend = "glx";
-# backend = "xrender";
 
 # Use higher precision during rendering, and apply dither when presenting the
 # rendered screen. Reduces banding artifacts, but might cause performance
