--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -35,7 +35,7 @@ monitor=,preferred,auto,1
 # Set programs that you use
 $terminal = wezterm
 $fileManager = nautilus
-$menu = wofi --show drun
+$menu = wofi -i --show drun -c $HOME/.config/wofi/config
 $lock = hyprlock
 
 #################
