--- a/.config/kanshi/config
+++ b/.config/kanshi/config
@@ -6,4 +6,8 @@ profile Dual {
 	output "Dell Inc. DELL P2720D H8FZS03"
   output eDP-1 disable
 }
+profile Work {
+  output "Dell Inc. DELL U2722DE B4YYBH3"
+  output eDP-1 disable
+}
 
